[package]
name = "netlink-packet-utils"
version = "0.5.2"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rust-netlink/netlink-packet-utils"
repository = "https://github.com/rust-netlink/netlink-packet-utils"
license = "MIT"
description = "macros and helpers for parsing netlink messages"
readme = "README.md"


[dependencies]
log = "0.4"
axerrno = { path = "../../crates/axerrno" }
byteorder = { version = "1", default-features = false }
paste = "1.0"
